syntax = "proto3";

// Common message definitions across services.

package common;
option go_package = "github.com/oasislabs/ekiden/go/grpc/common";

message Address {
    enum Transport {
        TCPv4 = 0; // TCP IPv4
        TCPv6 = 1; // TCP IPv6
    }
    Transport transport = 1;
    bytes address = 2;
    uint32 port = 3;
}

message Certificate {
    bytes der = 1;
}

message Entity {
    bytes id = 1;
    bytes eth_address = 2;
}

message Node {
    bytes id = 1;
    bytes eth_address = 2;
    bytes entity_id = 3;
    uint64 expiration = 4;
    repeated Address addresses = 5;
    Certificate certificate = 6;
    // TODO: stake should be formalized in common or roothash.
    bytes stake = 7;
}

message Signature {
    bytes pubkey = 1;
    bytes signature = 2;
}

message Signed {
    bytes blob = 1;
    Signature signature = 2;
}

service TimeSource {
  rpc GetEpoch (EpochRequest) returns (EpochResponse) {}
  rpc WatchEpochs (WatchEpochRequest) returns (stream WatchEpochResponse) {}
}

message EpochRequest {
}

message EpochResponse {
  uint64 current_epoch = 1;
  uint64 within_epoch = 2;
}

message WatchEpochRequest {
}

message WatchEpochResponse {
  uint64 current_epoch = 1;
}
